--- a/Automatic_Testing/test-output/index.html
+++ b/Automatic_Testing/test-output/index.html
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Sorting_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Sorting_Suite" title="Day1" class="method navigator-link" hash-for-method="Verify_sorting">Verify_sorting</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Sorting_Suite" title="Day2" class="method navigator-link" hash-for-method="Verify_sorting">Verify_sorting</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Sorting_Suite -->
@@ -121,7 +121,7 @@
           <div class="suite-Sorting_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Day1</span>
+              <span class="class-name">Day2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Sorting Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test scenarios&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Day1&quot;/&gt;
+      &lt;class name=&quot;Day2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test scenarios --&gt;
 &lt;/suite&gt; &lt;!-- Sorting Suite --&gt;
@@ -188,13 +188,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Verify_sorting')
-data.setCell(0, 2, 'Day1')
-data.setCell(0, 3, 6935);
+data.setCell(0, 2, 'Day2')
+data.setCell(0, 3, 7668);
 window.suiteTableData['Sorting_Suite']= { tableData: data, tableDiv: 'times-div-Sorting_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Sorting_Suite">
               </div> <!-- times-div-Sorting_Suite -->
             </div> <!-- times-div -->
@@ -211,11 +211,11 @@ return data;
                 <span class="reporter-method-output">Open Base URL</span>
                 <span class="reporter-method-output">Compare Titles</span>
                 <span class="reporter-method-output">click on Mobile Menu</span>
-                <span class="reporter-method-output">Compare Titles</span>
-                <span class="reporter-method-output">select type of Sort by Name</span>
-                <span class="reporter-method-output">Taking Screenshot</span>
-                <span class="reporter-method-output"><img src='screenshots\20240804_231810.png' alt='screenshot' style="width:500px;height:500px;" /></span>
-                <span class="reporter-method-output">check if the items are sorted by name or not</span>
+                <span class="reporter-method-output">Get cost of sony Xperia mobile from the list of all mobiles</span>
+                <span class="reporter-method-output">Click on mobile Xperia mobile</span>
+                <span class="reporter-method-output">Get cost of sony Xperia mobile from detail page</span>
+                <span class="reporter-method-output">Compare the 2 cost values</span>
+                <span class="reporter-method-output">Equal values</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -233,18 +233,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Day1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">Verify_sorting</span>
-                <span class="method-start">1420 ms</span>
+                <span class="method-start">2589 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">Finish</span>
-                <span class="method-start">8372 ms</span>
+                <span class="method-start">10257 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
