--- a/Automatic_Testing/test-output/emailable-report.html
+++ b/Automatic_Testing/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Sorting Suite</th></tr>
-<tr><td><a href="#t0">Test scenarios</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,621</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test scenarios</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,553</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Sorting Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test scenarios &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Day1</td><td><a href="#m0">Verify_sorting</a></td><td rowspan="1">1722806283826</td><td rowspan="1">6935</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Sorting Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test scenarios &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Day2</td><td><a href="#m0">Verify_sorting</a></td><td rowspan="1">1722902039354</td><td rowspan="1">7668</td></tr></tbody>
 </table>
-<h2>Test scenarios</h2><h3 id="m0">Day1#Verify_sorting</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Open Base URL<br/>Compare Titles<br/>click on Mobile Menu<br/>Compare Titles<br/>select type of Sort by Name<br/>Taking Screenshot<br/><img src='screenshots\20240804_231810.png' alt='screenshot' style="width:500px;height:500px;" /><br/>check if the items are sorted by name or not</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test scenarios</h2><h3 id="m0">Day2#Verify_sorting</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Open Base URL<br/>Compare Titles<br/>click on Mobile Menu<br/>Get cost of sony Xperia mobile from the list of all mobiles<br/>Click on mobile Xperia mobile<br/>Get cost of sony Xperia mobile from detail page<br/>Compare the 2 cost values<br/>Equal values</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
