--- a/Automatic_Testing/test-output/index.html
+++ b/Automatic_Testing/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Sorting_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Sorting_Suite" title="Day2" class="method navigator-link" hash-for-method="Verify_sorting">Verify_sorting</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Sorting_Suite" title="Day2" class="method navigator-link" hash-for-method="Verify_scenario">Verify_scenario</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Sorting_Suite" title="Day1" class="method navigator-link" hash-for-method="Verify_sorting">Verify_sorting</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Sorting_Suite -->
@@ -122,6 +127,21 @@
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">Day2</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Verify_scenario">
+                  </a> <!-- Verify_scenario -->
+                  <span class="method-name">Verify_scenario</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Sorting_Suite-class-passed -->
+          <div class="suite-Sorting_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">Day1</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -145,6 +165,7 @@
 &lt;suite name=&quot;Sorting Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test scenarios&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;Day1&quot;/&gt;
       &lt;class name=&quot;Day2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test scenarios --&gt;
@@ -159,7 +180,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test scenarios (1 class)</span>
+                <span class="test-name">Test scenarios (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,16 +206,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Verify_sorting')
+data.setCell(0, 1, 'Verify_scenario')
 data.setCell(0, 2, 'Day2')
-data.setCell(0, 3, 7668);
+data.setCell(0, 3, 7587);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Verify_sorting')
+data.setCell(1, 2, 'Day1')
+data.setCell(1, 3, 7109);
 window.suiteTableData['Sorting_Suite']= { tableData: data, tableDiv: 'times-div-Sorting_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Sorting_Suite">
               </div> <!-- times-div-Sorting_Suite -->
             </div> <!-- times-div -->
@@ -206,7 +231,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">Verify_sorting</span>
+              <span class="reporter-method-name">Verify_scenario</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Open Base URL</span>
                 <span class="reporter-method-output">Compare Titles</span>
@@ -216,6 +241,19 @@ return data;
                 <span class="reporter-method-output">Get cost of sony Xperia mobile from detail page</span>
                 <span class="reporter-method-output">Compare the 2 cost values</span>
                 <span class="reporter-method-output">Equal values</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Verify_sorting</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Open Base URL</span>
+                <span class="reporter-method-output">Compare Titles</span>
+                <span class="reporter-method-output">click on Mobile Menu</span>
+                <span class="reporter-method-output">Compare Titles</span>
+                <span class="reporter-method-output">select type of Sort by Name</span>
+                <span class="reporter-method-output">Taking Screenshot</span>
+                <span class="reporter-method-output"><img src='screenshots\20240806_134628.png' alt='screenshot' style="width:500px;height:500px;" /></span>
+                <span class="reporter-method-output">check if the items are sorted by name or not</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -233,18 +271,45 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Day1</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">Setup</span>
+                <span class="method-start">3144 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day1</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Verify_sorting</span>
-                <span class="method-start">2589 ms</span>
+                <span class="method-start">5768 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Verify_scenario</span>
+                <span class="method-start">12877 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day1</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">Finish</span>
-                <span class="method-start">10257 ms</span>
+                <span class="method-start">20464 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">Finish</span>
+                <span class="method-start">21831 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
