--- a/Automatic_Testing/test-output/index.html
+++ b/Automatic_Testing/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,6 +109,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Test_Suite" title="Day3" class="method navigator-link" hash-for-method="Verify_scenario3">Verify_scenario3</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_Suite" title="Day4" class="method navigator-link" hash-for-method="Verify_scenario4">Verify_scenario4</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -131,14 +136,29 @@
           <div class="suite-Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Day2</span>
+              <span class="class-name">Day4</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Verify_scenario2">
-                  </a> <!-- Verify_scenario2 -->
-                  <span class="method-name">Verify_scenario2</span>
+                  <a name="Verify_scenario4">
+                  </a> <!-- Verify_scenario4 -->
+                  <span class="method-name">Verify_scenario4</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Test_Suite-class-passed -->
+          <div class="suite-Test_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">Day3</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Verify_scenario3">
+                  </a> <!-- Verify_scenario3 -->
+                  <span class="method-name">Verify_scenario3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,14 +181,14 @@
           <div class="suite-Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Day3</span>
+              <span class="class-name">Day2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Verify_scenario3">
-                  </a> <!-- Verify_scenario3 -->
-                  <span class="method-name">Verify_scenario3</span>
+                  <a name="Verify_scenario2">
+                  </a> <!-- Verify_scenario2 -->
+                  <span class="method-name">Verify_scenario2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,6 +208,7 @@
       &lt;class name=&quot;Day1&quot;/&gt;
       &lt;class name=&quot;Day2&quot;/&gt;
       &lt;class name=&quot;Day3&quot;/&gt;
+      &lt;class name=&quot;Day4&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test scenarios --&gt;
 &lt;/suite&gt; &lt;!-- Test Suite --&gt;
@@ -201,7 +222,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test scenarios (3 classes)</span>
+                <span class="test-name">Test scenarios (4 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -227,24 +248,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Verify_scenario3')
 data.setCell(0, 2, 'Day3')
-data.setCell(0, 3, 11810);
+data.setCell(0, 3, 7477);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Verify_scenario2')
-data.setCell(1, 2, 'Day2')
-data.setCell(1, 3, 9457);
+data.setCell(1, 1, 'Verify_scenario4')
+data.setCell(1, 2, 'Day4')
+data.setCell(1, 3, 7115);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Verify_sorting')
-data.setCell(2, 2, 'Day1')
-data.setCell(2, 3, 6276);
+data.setCell(2, 1, 'Verify_scenario2')
+data.setCell(2, 2, 'Day2')
+data.setCell(2, 3, 6048);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'Verify_sorting')
+data.setCell(3, 2, 'Day1')
+data.setCell(3, 3, 4740);
 window.suiteTableData['Test_Suite']= { tableData: data, tableDiv: 'times-div-Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-Test_Suite">
               </div> <!-- times-div-Test_Suite -->
             </div> <!-- times-div -->
@@ -255,6 +280,45 @@ return data;
             <span class="header-content">Reporter output for Test Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Verify_scenario2</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Open Base URL</span>
+                <span class="reporter-method-output">click on Mobile Menu</span>
+                <span class="reporter-method-output">Get cost of sony Xperia mobile from the list of all mobiles</span>
+                <span class="reporter-method-output">Click on mobile Xperia mobile</span>
+                <span class="reporter-method-output">Get cost of sony Xperia mobile from detail page</span>
+                <span class="reporter-method-output">Compare the 2 cost values</span>
+                <span class="reporter-method-output">Equal values</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Verify_sorting</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Open Base URL</span>
+                <span class="reporter-method-output">Compare Titles</span>
+                <span class="reporter-method-output">click on Mobile Menu</span>
+                <span class="reporter-method-output">Compare Titles</span>
+                <span class="reporter-method-output">select type of Sort by Name</span>
+                <span class="reporter-method-output">Taking Screenshot</span>
+                <span class="reporter-method-output"><img src='screenshots\20240807_003558.png' alt='screenshot' style="width:500px;height:500px;" /></span>
+                <span class="reporter-method-output">check if the items are sorted by name or not</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Verify_scenario4</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Open Base URL</span>
+                <span class="reporter-method-output">click on Mobile Menu</span>
+                <span class="reporter-method-output">Add to compare(Iphone)</span>
+                <span class="reporter-method-output">message shown with correct message</span>
+                <span class="reporter-method-output">Add to compare(Sony xperia)</span>
+                <span class="reporter-method-output">message shown with correct message</span>
+                <span class="reporter-method-output">Click on compare button</span>
+                <span class="reporter-method-output">switch to popup window</span>
+                <span class="reporter-method-output">title shown with correctly</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">Verify_scenario3</span>
               <div class="reporter-method-output-div">
@@ -268,31 +332,6 @@ return data;
                 <span class="reporter-method-output">Empty Cart</span>
                 <span class="reporter-method-output">check empty cart message</span>
                 <span class="reporter-method-output">message shown with correct message</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">Verify_sorting</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Open Base URL</span>
-                <span class="reporter-method-output">Compare Titles</span>
-                <span class="reporter-method-output">click on Mobile Menu</span>
-                <span class="reporter-method-output">Compare Titles</span>
-                <span class="reporter-method-output">select type of Sort by Name</span>
-                <span class="reporter-method-output">Taking Screenshot</span>
-                <span class="reporter-method-output"><img src='screenshots\20240806_150242.png' alt='screenshot' style="width:500px;height:500px;" /></span>
-                <span class="reporter-method-output">check if the items are sorted by name or not</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">Verify_scenario2</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Open Base URL</span>
-                <span class="reporter-method-output">click on Mobile Menu</span>
-                <span class="reporter-method-output">Get cost of sony Xperia mobile from the list of all mobiles</span>
-                <span class="reporter-method-output">Click on mobile Xperia mobile</span>
-                <span class="reporter-method-output">Get cost of sony Xperia mobile from detail page</span>
-                <span class="reporter-method-output">Compare the 2 cost values</span>
-                <span class="reporter-method-output">Equal values</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -320,56 +359,77 @@ return data;
               <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Setup</span>
-                <span class="method-start">1816 ms</span>
+                <span class="method-start">2523 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Day3</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Setup</span>
-                <span class="method-start">4605 ms</span>
+                <span class="method-start">4066 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day4</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">Setup</span>
+                <span class="method-start">5657 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Day1</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Verify_sorting</span>
-                <span class="method-start">7270 ms</span>
+                <span class="method-start">7263 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Verify_scenario2</span>
-                <span class="method-start">13551 ms</span>
+                <span class="method-start">12007 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Day3</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Verify_scenario3</span>
-                <span class="method-start">23011 ms</span>
+                <span class="method-start">18056 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day4</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Verify_scenario4</span>
+                <span class="method-start">25534 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Day1</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">Finish</span>
-                <span class="method-start">34823 ms</span>
+                <span class="method-start">32650 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Day2</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">Finish</span>
-                <span class="method-start">36389 ms</span>
+                <span class="method-start">34288 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Day3</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">Finish</span>
-                <span class="method-start">37795 ms</span>
+                <span class="method-start">35070 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Day4</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">Finish</span>
+                <span class="method-start">35134 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
